任务十三完成

--- a/cssXZ/Stage-four/task-3/gamejingling/index.html
+++ b/cssXZ/Stage-four/task-3/gamejingling/index.html
@@ -5,9 +5,9 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1">
+    <link href="./css/reset.css" rel="stylesheet">    
     <link href="./css/index.css" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <span class="glyphicon glyphicon-menu-hamburger"></span>
