--- a/cssXZ/Stage-four/task-3/gamejingling/discover.html
+++ b/cssXZ/Stage-four/task-3/gamejingling/discover.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/my-font-size.css">
+    <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/discover.css" rel="stylesheet">
 </head>
 
