--- a/cssXZ/Stage-four/task-3/gamejingling/result.html
+++ b/cssXZ/Stage-four/task-3/gamejingling/result.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/my-font-size.css">
-    <link href="./css/reset.css" rel="stylesheet">
+    <link href="./css/result.css" rel="stylesheet">
     <link rel="stylesheet" href=".css/reset.css">
 </head>
 
