--- a/cssXZ/Stage-four/task-4/responsive/zhiyeliebiao2.html
+++ b/cssXZ/Stage-four/task-4/responsive/zhiyeliebiao2.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width,  initial-scale=1, maximum-scale=1">
 
     <title>This is test for bootstrap--task11</title>
-    <link rel="stylesheet" href="./职业列表_files/bootstrap.css">
-    <script rel="stylesheet" src="./职业列表_files/jquery-3.1.0.js"></script>
-    <script rel="stylesheet" src="./职业列表_files/bootstrap.js"></script>
+
     <link rel="stylesheet" href="./职业列表_files/layout.css">
     <link rel="stylesheet" href="./职业列表_files/task11.css">
     <style type="text/css">
@@ -730,7 +728,7 @@
 
                     <p class="foot-left">技能树-改变你我</p>
 
-                    <a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">关于我们</a> | <a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">联系我们</a>                    | <a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">合作企业</a>
+                    <a href="#">关于我们</a> | <a href="#">联系我们</a>                    | <a href="#">合作企业</a>
 
                 </div>
 
@@ -738,9 +736,9 @@
 
                     <p class="foot-mid">旗下网站</p>
 
-                    <a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">草船云孵化器</a>　　　<a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">最强IT特训营</a>                    <br><br>
+                    <a href="#">草船云孵化器</a>　　　<a href="#">最强IT特训营</a>                    <br><br>
 
-                    <a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">葡萄藤轻游戏</a>　　　<a href="http://119.10.57.69:880/jnshu033/css/task11/task11.html">桌游精灵</a>
+                    <a href="#">葡萄藤轻游戏</a>　　　<a href="#">桌游精灵</a>
 
                 </div>
 
@@ -779,7 +777,8 @@
 
 
 
-
+    <script rel="stylesheet" src="./职业列表_files/jquery-3.1.0.js"></script>
+    <script rel="stylesheet" src="./职业列表_files/bootstrap.js"></script>
 </body>
 
 </html>
