--- a/cssXZ/Stage-four/task-4/responsive/zhiyeliebiao2.html
+++ b/cssXZ/Stage-four/task-4/responsive/zhiyeliebiao2.html
@@ -4,9 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,  initial-scale=1, maximum-scale=1">
-
-    <title>This is test for bootstrap--task11</title>
-
+    <title></title>
     <link rel="stylesheet" href="./职业列表_files/layout.css">
     <link rel="stylesheet" href="./职业列表_files/task11.css">
     <style type="text/css">
@@ -774,11 +772,6 @@
 
     </footer>
 
-
-
-
-    <script rel="stylesheet" src="./职业列表_files/jquery-3.1.0.js"></script>
-    <script rel="stylesheet" src="./职业列表_files/bootstrap.js"></script>
 </body>
 
 </html>
