--- a/cssXZ/Stage-four/task-4/responsive/companylist.html
+++ b/cssXZ/Stage-four/task-4/responsive/companylist.html
@@ -5,9 +5,6 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../../../static/jquery.min.js"></script>
-    <script src="../../../static/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/my-font-size.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" media="screen and (min-width : 790px)" href="./css/base.css">
@@ -20,8 +17,8 @@
     <header>
         <div id="service">
             <div class="ser-row row alldis">
-                <div id="tel" class="col-xs-7">客服热线：010-594-78634</div>
-                <div id="contact" class="col-xs-5">
+                <div id="tel" class="">客服热线：010-594-78634</div>
+                <div id="contact" class="">
                     <a href="#"><span id="icon-con-1"></span></a>
                     <a href="#"><span id="icon-con-2"></span></a>
                     <a href="#"><span id="icon-con-3"></span></a>
@@ -30,10 +27,10 @@
         </div>
         <nav>
             <div class="ser-row row not-mobile">
-                <div id="home-logo" class="col-xs-6">
+                <div id="home-logo" class="">
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
-                <div id="nav-step" class="col-xs-6">
+                <div id="nav-step" class="">
                     <li><a href="#">职业殿堂</a></li>
                     <li><a href="#">线上学习</a></li>
                     <li><a href="#">我的学院</a></li>
@@ -46,7 +43,11 @@
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
                 <div id="mob-nav-step">
-                    <span id="myMBtn" class="glyphicon glyphicon-menu-hamburger"></span>
+                    <span id="myMBtn" class="glyphicon glyphicon-menu-hamburger">
+                        <span class="hanbao-line"></span>
+                        <span class="hanbao-line"></span>
+                        <span class="hanbao-line"></span>
+                    </span>
                     <div id="menu-list">
                         <li><a href="#">职业殿堂</a></li>
                         <li><a href="#">线上学习</a></li>
