--- a/cssXZ/Stage-four/task-4/responsive/jinengshu.html
+++ b/cssXZ/Stage-four/task-4/responsive/jinengshu.html
@@ -5,9 +5,6 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../../../static/jquery.min.js"></script>
-    <script src="../../../static/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/my-font-size.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" media="screen and (min-width : 790px)" href="./css/base.css">
@@ -20,8 +17,8 @@
     <header>
         <div id="service">
             <div class="ser-row row alldis">
-                <div id="tel" class="col-xs-7">客服热线：010-594-78634</div>
-                <div id="contact" class="col-xs-5">
+                <div id="tel" class="">客服热线：010-594-78634</div>
+                <div id="contact" class="">
                     <a href="#"><span id="icon-con-1"></span></a>
                     <a href="#"><span id="icon-con-2"></span></a>
                     <a href="#"><span id="icon-con-3"></span></a>
@@ -30,10 +27,10 @@
         </div>
         <nav>
             <div class="ser-row row not-mobile">
-                <div id="home-logo" class="col-xs-6">
+                <div id="home-logo" class="">
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
-                <div id="nav-step" class="col-xs-6">
+                <div id="nav-step" class="">
                     <li><a href="#">职业殿堂</a></li>
                     <li><a href="#">线上学习</a></li>
                     <li><a href="#">我的学院</a></li>
@@ -46,7 +43,11 @@
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
                 <div id="mob-nav-step">
-                    <span id="myMBtn" class="glyphicon glyphicon-menu-hamburger"></span>
+                    <span id="myMBtn" class="glyphicon glyphicon-menu-hamburger">
+                        <span class="hanbao-line"></span>
+                        <span class="hanbao-line"></span>
+                        <span class="hanbao-line"></span>
+                    </span>
                     <div id="menu-list">
                         <li><a href="#">职业殿堂</a></li>
                         <li><a href="#">线上学习</a></li>
@@ -64,6 +65,7 @@
     <main>
             <!-- ---------------------------------------------------------------------------------------------------- -->
     <!-- bootstrap轮播图开始 -->
+    <!-- 已经不再引用bootstrap，仅仅只是保留了之前的dom结构，所以没有轮播图效果 -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -75,21 +77,7 @@
                 <div class="item active">
                     <img src="./images/banner.jpg" alt="First slide">
                 </div>
-                <div class="item">
-                    <img src="./images/banner.jpg" alt="Second slide">
-                </div>
-                <div class="item">
-                    <img src="./images/banner.jpg" alt="Third slide">
-                </div>
             </div>
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-            </a>
         </div>
         <!-- bootstrap轮播图结束 -->
         <!-- ------------------------------------------------------------------------------------------------------ -->
