--- a/jsXZ/Stage-one/jiugongge.html
+++ b/jsXZ/Stage-one/jiugongge.html
@@ -11,42 +11,80 @@
         font-size: 62.5%;
         margin: 0;
     }
+    main {
+        margin: 0 auto;
+        width: 40%;
+    }
     .box {
         width: auto;
         margin: 1em 0 0 1em;
     }
+
     .row {
         display: flex;
         justify-content: center;
     }
+
     .item {
         display: inline-block;
-        width: 30%; 
+        width: 30%;
         padding: 30% 0 0 0;
         border-radius: 1em;
         margin: 0 1em 1em 0;
         background-color: orange;
     }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        height: 10rem;
+    }
+
+    button {
+        outline: none;
+        border: .1rem solid orange;
+        width: 10rem;
+        height: 3rem;
+        font-size: 1rem;
+        border-radius: 5px;
+        color: orange;
+        background-color: #ffffff;
+    }
+
+
+    button:hover {
+        color: #ffffff;
+        background-color: orange;
+    }
 </style>
 
 <body>
-    <div class="box">
-        <div class="row">
-            <span class="item"></span>
-            <span class="item"></span>
-            <span class="item"></span>
+    <main>
+        <div class="box">
+            <div class="row">
+                <span class="item"></span>
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
+            <div class="row">
+                <span class="item"></span>
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
+            <div class="row">
+                <span class="item"></span>
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
         </div>
-        <div class="row">
-            <span class="item"></span>
-            <span class="item"></span>
-            <span class="item"></span>
-        </div>
-        <div class="row">
-            <span class="item"></span>
-            <span class="item"></span>
-            <span class="item"></span>
-        </div>
-    </div>
+    </main>
+
+    <footer>
+        <button id="start">开始闪</button>
+        <button id="stop">结束闪</button>
+    </footer>
     <script src="jiugongge.js"></script>
 </body>
 
